swagger without body
