# docs/swagger.json
@@ -4,9 +4,8 @@
         "contact": {}
     },
     "paths": {
-        "/": {
-            "get": {
-                "description": "get the status of server.",
+        "/v1/api/log": {
+            "post": {
                 "consumes": [
                     "*/*"
                 ],
@@ -14,9 +13,66 @@
                     "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "log"
                 ],
-                "summary": "Show the status of server.",
+                "summary": "Create Log",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/api/log/": {
+            "get": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "log"
+                ],
+                "summary": "Get all",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/api/log/{id}": {
+            "get": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "log"
+                ],
+                "summary": "Get log by id",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/api/status": {
+            "get": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "log"
+                ],
+                "summary": "Status",
                 "responses": {
                     "200": {
                         "description": "OK"
